--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "concurrently yarn:start:*",
+    "start:public": "cd ./public && yarn start",
+    "start:server": "cd ./server && yarn start"
   },
   "repository": {
     "type": "git",
