--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "concurrently yarn:start:*",
-    "start:public": "cd ./public && yarn start",
-    "start:server": "cd ./server && yarn start"
+    "start": "concurrently npm:start:*",
+    "start:public": "cd ./public && npm start",
+    "start:server": "cd ./server && npm start"
   },
   "repository": {
     "type": "git",
