--- a/server/package.json
+++ b/server/package.json
@@ -15,11 +15,11 @@
     "tslib": "1.11.2"
   },
   "dependencies": {
-    "@vendure/admin-ui-plugin": "0.15.2",
-    "@vendure/asset-server-plugin": "0.15.2",
-    "@vendure/core": "0.15.2",
-    "@vendure/email-plugin": "0.15.2",
-    "sqlite3": "5.0.0",
+    "@vendure/admin-ui-plugin": "~0.16.0",
+    "@vendure/asset-server-plugin": "~0.16.0",
+    "@vendure/core": "~0.16.0",
+    "@vendure/email-plugin": "~0.16.0",
+    "sql.js": "1.3.2",
     "typescript": "3.8.3"
   },
   "devDependencies": {
