--- a/public/package.json
+++ b/public/package.json
@@ -2,6 +2,12 @@
   "name": "public",
   "version": "0.1.0",
   "private": true,
+  "scripts": {
+    "start": "cross-env PORT=3100 react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
   "dependencies": {
     "bootstrap": "^4.5.2",
     "cra-template": "1.0.3",
@@ -11,15 +17,10 @@
     "react-dom": "^16.13.1",
     "react-icons": "^3.11.0",
     "react-redux": "^7.2.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8"
-  },
-  "scripts": {
-    "start": "cross-env PORT=3100 react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": "react-app"
