--- a/public/package.json
+++ b/public/package.json
@@ -13,6 +13,7 @@
     "bootstrap": "^4.5.2",
     "cra-template": "1.0.3",
     "cross-env": "^7.0.2",
+    "jquery": "^3.5.1",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
